<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.programacion.robertomtz.iniciosesionfirebase.InicioSesionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/iniciar_sesion"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/inicio_sesion_login_btn_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        android:id="@+id/textView3" />

    <EditText
        android:id="@+id/inicio_sesion_et_usuario"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/inicio_sesion_et_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/inicio_sesion_btn_ingresar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/inicio_sesion_btn_crear_cuenta"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
