<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crear_cuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.programacion.robertomtz.iniciosesionfirebase.CrearCuentaActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:textSize="22sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

    <EditText
        android:id="@+id/crear_cuenta_et_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/crear_cuenta_et_usuario"
        android:layout_alignLeft="@+id/crear_cuenta_et_usuario"
        android:layout_alignStart="@+id/crear_cuenta_et_usuario"
        android:layout_marginTop="49dp" />

    <EditText
        android:id="@+id/crear_cuenta_et_usuario"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/crear_cuenta_et_repite_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/repite_password"
        android:layout_below="@+id/crear_cuenta_et_password"
        android:layout_alignLeft="@+id/crear_cuenta_et_password"
        android:layout_alignStart="@+id/crear_cuenta_et_password"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/crear_cuenta_btn_crear"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp" />


</RelativeLayout>
